<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/main_weather_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/open_sans_light"
            android:text="@string/emptyResource"
            android:textAppearance="@android:style/TextAppearance.Material"
            android:textColor="@android:color/white"
            android:textSize="60sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/main_weather_degrees"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/open_sans_light"
            android:text="@string/emptyResource"
            android:textAlignment="center"
            android:textAppearance="@android:style/TextAppearance.Material"
            android:textColor="@android:color/white"
            android:textSize="60sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintBaseline_toBaselineOf="@+id/main_weather_location"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/main_weather_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/open_sans_light"
            android:text="@string/emptyResource"
            android:textAppearance="@android:style/TextAppearance.Material"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weatherIcon" />

        <TextView
            android:id="@+id/main_weather_humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/open_sans_light"
            android:text="@string/emptyResource"
            android:textAppearance="@android:style/TextAppearance.Material"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/humidity"
            app:layout_constraintTop_toTopOf="@+id/humidity" />

        <TextView
            android:id="@+id/main_weather_wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/open_sans_light"
            android:text="@string/emptyResource"
            android:textAppearance="@android:style/TextAppearance.Material"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/main_weather_humidity"
            app:layout_constraintTop_toBottomOf="@+id/main_weather_humidity" />

        <TextView
            android:id="@+id/main_weather_pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/open_sans_light"
            android:text="@string/emptyResource"
            android:textAppearance="@android:style/TextAppearance.Material"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/main_weather_humidity"
            app:layout_constraintTop_toBottomOf="@+id/main_weather_wind" />

        <TextView
            android:id="@+id/humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/open_sans_light"
            android:text="@string/humidity"
            android:textAppearance="@android:style/TextAppearance.Material"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/main_weather_humidity"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_weather_desc" />

        <TextView
            android:id="@+id/wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/open_sans_light"
            android:text="@string/wind"
            android:textAppearance="@android:style/TextAppearance.Material"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/humidity"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintTop_toBottomOf="@+id/humidity" />

        <TextView
            android:id="@+id/pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/open_sans_light"
            android:text="@string/pressure"
            android:textAppearance="@android:style/TextAppearance.Material"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/humidity"
            app:layout_constraintTop_toBottomOf="@+id/wind" />

        <ImageView
            android:id="@+id/weatherIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/weather_logo"
            android:src="@drawable/cloud"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_weather_degrees"
            app:srcCompat="@drawable/cloud" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pressure">

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>
</ScrollView>